# perripage-ferrum

./: .gitignore  periprint-spec.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BLUETOOTH_SETUP.md  bluetooth-protocol-trace-analysis.md  hardware-notes.md  printer-protocol-implementation-plan.md  research.md  stage5-ux-plan.md
scripts/: hw_probe.py
src/periprint/: app.py
src/periprint/infra/: peripage_client.py  printer_status_listener.py  raw_printer_protocol.py
src/periprint/infra/bt/: bluetoothctl_backend.py  scanner.py
src/periprint/infra/renderers/: base.py  image_renderer.py  pdf_renderer.py  text_renderer.py
src/periprint/models/: document.py  enums.py  job.py
src/periprint/services/: events.py  job_manager.py  pipeline.py
src/periprint/ui/: error_panel.py  main_window.py  preview_panel.py  printer_panel.py  queue_panel.py  scan_dialog.py  scan_panel.py  settings_dialog.py  settings_panel.py
src/periprint/utils/: page_range.py  version.py
tests/integration/: test_job_manager_resume.py  test_peripage_client_protocol_extensions.py  test_peripage_client_retry.py
tests/integration/fakes/: fake_raw_printer.py
tests/unit/: test_bluetoothctl_backend.py  test_package.py  test_page_range.py  test_pdf_renderer.py  test_pipeline.py  test_printer_status_listener.py  test_renderers_base.py  test_scanner_filter.py
