[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "periprint"
version = "0.1.0"
description = "Friendly desktop GUI for printing to Peripage thermal printers over Bluetooth"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "RainManVays" }]
keywords = ["peripage", "thermal-printer", "bluetooth", "customtkinter"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Printing",
]
dependencies = [
  "customtkinter>=5.2,<6",
  "tkinterdnd2>=0.4,<1",
  "Pillow>=10.0,<12",
  "PyMuPDF>=1.24,<2",
  "qrcode>=7,<9",
]

[project.optional-dependencies]
# Deliberately NOT part of the default/dev install: peripage pulls in PyBluez,
# which does not `pip install` cleanly on modern Python/setuptools without
# system-level build headers (see docs/BLUETOOTH_SETUP.md). Keeping it an
# extra means CI and the unit/integration test suite never need a real
# Bluetooth stack installed.
bluetooth = [
  "peripage>=1.2,<2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
periprint = "periprint.app:main"

[project.urls]
Homepage = "https://github.com/RainManVays/perripage-ferrum"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["periprint"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["hardware: requires a real Peripage printer; excluded from CI"]
addopts = "-m 'not hardware'"
